--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "swr": "^2.0.4"
   },
   "devDependencies": {
