--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "classnames": "^2.3.2",
@@ -23,6 +24,11 @@
     "eslint-config-next": "13.1.6",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
