--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "husk": "^0.5.3",
+    "lint-staged": "^13.1.2",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.4",
