--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "husk": "^0.5.3",
+    "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
