--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-toastify": "^9.1.1",
     "swr": "^2.0.4"
   },
